--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:$recyclerview_version"
 
+    // API
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.room:room-runtime:2.2.1'
+
 }
